--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@web3modal/ethers": "^4.0.1",
     "ethers": "^6.11.0",
-    "framer-motion": "^11.0.3",
+    "gsap": "^3.12.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
