--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "gsap": "^3.12.5",
     "next": "14.1.0",
+    "next-reveal": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "hardhat": "^2.22.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
   }
